--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
 <P>#homem-aranha</P>
 
-https://youtu.be/gt_fAE1Eg2Q?si=p6Iwbq5Sn5Z5zLFg
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=KuaQPoP_jI0eblka" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
