--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
+<head>
+    <link rel="stylesheet" href="style.css">
+
+</head>
 
 <body>
-<header>ALURAFLIX</header>
+    <header>ALURAFLIX</header>
 
-<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
-<P>#homem-aranha</P>
+    <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
+    <P>#homem-aranha</P>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=KuaQPoP_jI0eblka" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=KuaQPoP_jI0eblka"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
