--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 </head>
 
 <body>
-    <header>ALURAFLIX</header>
+    <div>
+        <header>ALURAFLIX</header>
+    </div>
 
-    <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
-    <P>#homem-aranha</P>
+    <div>
+        <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
+        <P>#homem-aranha</P>
+    </div>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=KuaQPoP_jI0eblka"
         title="YouTube video player" frameborder="0"
