--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <header>ALURAFLIX</header>
     </div>
 
+   <section>
     <div>
         <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
         <P>#homem-aranha</P>
@@ -19,5 +20,6 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+   </section>
 
 </body>
