--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html lang="pt-BR">
+ 
+
 <head>
     <link rel="stylesheet" href="style.css">
     <title>ALURAFLIX</title>
@@ -23,3 +26,5 @@
    </section>
 
 </body>
+
+</html>
