--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
 
    <section>
-    <div>
+    <div class="chamada-texto">
         <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
         <P>#homem-aranha</P>
     </div>
