--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>ALURAFLIX</header>
     </div>
 
-    <section>
+    <section class="chamada">
         <div class="chamada-texto">
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME ?</h1>
             <P>#homem-aranha</P>
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="categoria">
 <h2>Filme e Série</h2>
 
 <div class="categoria-videos">
